Added SQlite support
Added a database and rewrote most of the code

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,9 +1,11 @@
 <resources>
-    <string name="app_name">iGotvya</string>
+    <string name="app_name">SmartChef</string>
 
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
     <string name="start_search">Намери рецепта!</string>
+    <string name="search_title">Намери продукт</string>
+    <string name="search_hint">Hint!</string>
 
     <string-array name="recepti">
         <item>Popara</item>
@@ -38,4 +40,5 @@
     <string name="hello_world">Hello world!</string>
     <string name="title_activity_recepta">Рецепти</string>
     <string name="current_recept">Няма намерени рецепти</string>
+    <string name="title_activity_search_results">SearchResultsActivity</string>
 </resources>
