--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,20 +19,24 @@
     <string name="title_activity_recept">Рецепти</string>
     <string name="hrana_name">Храна</string>
     <string name="hrana_recepta">Рецепти</string>
-    <string name="omlet">НЕОБХОДИМИ ПРОДУКТИ
-Добави в списъка за пазаруване4 бр. яйца
-Добави в списъка за пазаруване50 мл прясно мляко
-Добави в списъка за пазаруванетечен маргарин или масло</string>
+    <string name="omlet">
+4 бр. яйца,
+50 мл прясно мляко,
+течен маргарин или масло</string>
         <string name="omlet2">
 НАЧИН НА ПРИГОТВЯНЕ
 Яйцата и млякото се разбиват, посоляват се и пържат на силен огън от двете страни.</string>
-    <string name="popara">НЕОБХОДИМИ ПРОДУКТИ
-Добави в списъка за пазаруване3/4 бр. (750 г) сух бял хляб
-Добави в списъка за пазаруване1 и 1/4 ч.ч. (250 г) сирене
-Добави в списъка за пазаруване125 г масло
-Добави в списъка за пазаруване1 ч.л. (5 г) червен пипер
-Добави в списъка за пазаруванесол
-Добави в списъка за пазаруване5 ч.ч. (1 л) вода</string>
+    <string name="popara">
+3/4 бр. (750 г) сух бял хляб,
+1 и 1/4 ч.ч. (250 г) сирене,
+
+125 г масло,
+
+1 ч.л. (5 г) червен пипер,
+
+сол,
+
+5 ч.ч. (1 л) вода</string>
         <string name="popara2">
 НАЧИН НА ПРИГОТВЯНЕ
 Хлябът се натрошава на хапки и се слага на редове в дълбок съд, като между редовете и отгоре се поставя натрошеното сирене. Маслото се запържва, отдръпва се от огъня и се разбърква с червения пипер, след което се залива с подсолената вода, оставя се да заври и се изсипва върху хляба. Попарата се похлупва, за да се задуши. Поднася се топла.</string>
