--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,9 +23,6 @@
 4 бр. яйца,
 50 мл прясно мляко,
 течен маргарин или масло</string>
-        <string name="omlet2">
-НАЧИН НА ПРИГОТВЯНЕ
-Яйцата и млякото се разбиват, посоляват се и пържат на силен огън от двете страни.</string>
     <string name="popara">
 3/4 бр. (750 г) сух бял хляб,
 1 и 1/4 ч.ч. (250 г) сирене,
@@ -37,10 +34,21 @@
 сол,
 
 5 ч.ч. (1 л) вода</string>
-        <string name="popara2">
-НАЧИН НА ПРИГОТВЯНЕ
-Хлябът се натрошава на хапки и се слага на редове в дълбок съд, като между редовете и отгоре се поставя натрошеното сирене. Маслото се запържва, отдръпва се от огъня и се разбърква с червения пипер, след което се залива с подсолената вода, оставя се да заври и се изсипва върху хляба. Попарата се похлупва, за да се задуши. Поднася се топла.</string>
-
+    <string name="fok">475 брашно,
+1 ч.л. захар,
+1 ч.л. сол,
+1 ч.л. суха мая,
+3 с.л. зехтин,
+275 мл. вода,
+3 с.л. доматено пюре,
+150 г кашкавал</string>
+    <string name="hlebQco">2 филии хляб,
+100 г сирене,
+2 яйца</string>
+    <string name="guv">300 г кренвирши,
+250 г сирене,
+3 яйца,
+2 домата</string>
     <string name="hello_world">Hello world!</string>
     <string name="title_activity_recepta">Рецепти</string>
     <string name="current_recept">Няма намерени рецепти</string>
